--- a/src/components/RightSideBar/FollowCard/styles.css
+++ b/src/components/RightSideBar/FollowCard/styles.css
@@ -3,4 +3,13 @@
     margin: 1rem;
     padding: 2rem;
     border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); */
 }
+
+.follow-card h3 {
+    margin: 0;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
